// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addAddress 1`] = `"Read Only Mode"`;

exports[`addAddress 2`] = `
Array [
  Array [
    "addr1",
    "addr2",
    1,
  ],
]
`;

exports[`addCustodian 1`] = `"Read Only Mode"`;

exports[`addCustodian 2`] = `
Array [
  Array [
    "custodianAddr",
  ],
]
`;

exports[`addOtherContracts 1`] = `"Read Only Mode"`;

exports[`addOtherContracts 2`] = `
Array [
  Array [
    "otherContractAddr",
  ],
]
`;

exports[`getAddressPoolAddress 1`] = `"hotAddr1"`;

exports[`getAddressPoolAddress 2`] = `"hotAddr2"`;

exports[`getAddressPoolAddress 3`] = `"hotAddr3"`;

exports[`getAddressPoolAddress 4`] = `"coldAddr1"`;

exports[`getAddressPoolAddress 5`] = `"coldAddr2"`;

exports[`getAddressPoolAddress 6`] = `"coldAddr3"`;

exports[`getAddressPoolSize 1`] = `3`;

exports[`getAddressPoolSize 2`] = `3`;

exports[`getCandidate 1`] = `"candidatre"`;

exports[`getContractPoolAddress 1`] = `"custodianAddr1"`;

exports[`getContractPoolAddress 2`] = `"custodianAddr2"`;

exports[`getContractPoolAddress 3`] = `"custodianAddr3"`;

exports[`getContractPoolAddress 4`] = `"otherAddr1"`;

exports[`getContractPoolAddress 5`] = `"otherAddr2"`;

exports[`getContractPoolAddress 6`] = `"otherAddr3"`;

exports[`getContractPoolSize 1`] = `3`;

exports[`getContractPoolSize 2`] = `3`;

exports[`getModerator 1`] = `"moderator"`;

exports[`getStates 1`] = `
Object {
  "isStarted": true,
  "lastOperationTime": 100000,
  "operationCoolDown": 100000,
  "poolSizes": Object {
    "cold": 3,
    "custodian": 3,
    "hot": 3,
    "otherContract": 3,
  },
  "votingStage": "Moderator",
}
`;

exports[`isContractPassed 1`] = `true`;

exports[`removeAddress 1`] = `"Read Only Mode"`;

exports[`removeAddress 2`] = `
Array [
  Array [
    "addr",
    1,
  ],
]
`;

exports[`startContractVoting 1`] = `"Read Only Mode"`;

exports[`startContractVoting 2`] = `
Array [
  Array [
    "candidateAdddr",
  ],
]
`;

exports[`startManager 1`] = `"Read Only Mode"`;

exports[`startModeratorVoting 1`] = `"Read Only Mode"`;

exports[`terminateByTimeout 1`] = `"Read Only Mode"`;

exports[`terminateContractVoting 1`] = `"Read Only Mode"`;

exports[`vote 1`] = `"Read Only Mode"`;

exports[`vote 2`] = `
Array [
  Array [
    true,
  ],
  Array [
    true,
  ],
]
`;

exports[`voteStartTimestamp 1`] = `
Object {
  "started": 123456789000,
  "totalVoters": "3",
  "votedAgainst": "5",
  "votedFor": "10",
}
`;
